crates/umbral-macros/tests/task_macro_fixtures/zero_params.rs
#[umbral::task]
async fn no_params() -> Result<(), String> {
    Ok(())
}

fn main() {}
